--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
+    compile 'org.apache.httpcomponents:httpclient:4.5.2'
+    compile 'org.json:json:20160212'
+
 }
