--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.3.0'
     compile 'org.apache.httpcomponents:httpclient:4.5.2'
     compile 'org.json:json:20160212'
-
+    compile 'org.apache.logging.log4j:log4j:2.5'
 }
