--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'org.apache.httpcomponents:httpclient:4.5.2'
     compile 'org.json:json:20160212'
     compile 'org.apache.logging.log4j:log4j:2.5'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
