--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'org.json:json:20160212'
     compile 'org.apache.logging.log4j:log4j:2.5'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.google.code.gson:gson:2.5'
 }
