--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.google.code.gson:gson:2.5'
     compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.jjoe64:graphview:4.0.0'
+
 }
